gramaticay.output
Grammar

    0 $accept: translation_unit $end

    1 primary_expression: IDENTIFIER
    2                   | constant
    3                   | STRING
    4                   | '(' expression ')'

    5 constant: INTEGER_CONSTANT
    6         | CHARACTER_CONSTANT
    7         | FLOATING_CONSTANT

    8 postfix_expression: primary_expression
    9                   | postfix_expression '[' expression ']'

   10 $@1: /* empty */

   11 postfix_expression: postfix_expression '(' $@1 ')'

   12 $@2: /* empty */

   13 postfix_expression: postfix_expression '(' $@2 argument_expression_list ')'
   14                   | postfix_expression '.' IDENTIFIER
   15                   | postfix_expression INC_OP
   16                   | postfix_expression DEC_OP

   17 argument_expression_list: assignment_expression
   18                         | argument_expression_list ',' assignment_expression

   19 unary_expression: postfix_expression
   20                 | INC_OP unary_expression
   21                 | DEC_OP unary_expression
   22                 | unary_operator cast_expression
   23                 | SIZEOF unary_expression
   24                 | SIZEOF '(' type_name ')'

   25 unary_operator: '+'
   26               | '-'
   27               | '!'

   28 cast_expression: unary_expression
   29                | '(' type_name ')' cast_expression

   30 multiplicative_expression: cast_expression
   31                          | multiplicative_expression '*' cast_expression
   32                          | multiplicative_expression '/' cast_expression
   33                          | multiplicative_expression '%' cast_expression

   34 additive_expression: multiplicative_expression
   35                    | additive_expression '+' multiplicative_expression
   36                    | additive_expression '-' multiplicative_expression

   37 relational_expression: additive_expression
   38                      | relational_expression '<' additive_expression
   39                      | relational_expression '>' additive_expression
   40                      | relational_expression LE_OP additive_expression
   41                      | relational_expression GE_OP additive_expression

   42 equality_expression: relational_expression
   43                    | equality_expression EQ_OP relational_expression
   44                    | equality_expression NE_OP relational_expression

   45 logical_AND_expression: equality_expression
   46                       | logical_AND_expression AND_OP m equality_expression

   47 logical_OR_expression: logical_AND_expression
   48                      | logical_OR_expression OR_OP m logical_AND_expression

   49 conditional_expression: logical_OR_expression
   50                       | logical_OR_expression '?' expression ':' conditional_expression

   51 constant_expression: conditional_expression

   52 assignment_expression: conditional_expression
   53                      | unary_expression assignment_operator assignment_expression

   54 assignment_operator: '='
   55                    | MUL_ASSIG
   56                    | DIV_ASSIG
   57                    | MOD_ASSIG
   58                    | ADD_ASSIG
   59                    | SUB_ASSIG

   60 expression: assignment_expression
   61           | expression ',' assignment_expression

   62 declaration: declaration_specifiers ';'
   63            | declaration_specifiers init_declarator_list ';'
   64            | TYPEDEF declaration_specifiers declarator ';'
   65            | TYPEDEF error declarator ';'
   66            | TYPEDEF declaration_specifiers error ';'
   67            | error ';'

   68 declaration_specifiers: type_specifier

   69 init_declarator_list: init_declarator
   70                     | init_declarator_list ',' init_declarator

   71 init_declarator: declarator
   72                | declarator '=' initializer

   73 type_specifier: VOID
   74               | CHAR
   75               | SHORT
   76               | INT
   77               | LONG
   78               | FLOAT
   79               | DOUBLE
   80               | struct_or_union_specifier
   81               | typedef_name

   82 typedef_name: TYPEDEF_IDENTIFIER

   83 struct_or_union_specifier: struct_or_union IDENTIFIER '{' struct_declaration_list '}'
   84                          | struct_or_union '{' struct_declaration_list '}'

   85 struct_or_union: STRUCT
   86                | UNION

   87 struct_declaration_list: struct_declaration
   88                        | struct_declaration_list struct_declaration

   89 struct_declaration: specifier_qualifier_list struct_declarator_list ';'

   90 struct_declarator_list: struct_declarator
   91                       | struct_declarator_list ',' struct_declarator

   92 struct_declarator: declarator

   93 declarator: IDENTIFIER
   94           | '(' declarator ')'
   95           | declarator '[' INTEGER_CONSTANT ']'

   96 $@3: /* empty */

   97 declarator: declarator '(' $@3 parameter_list ')'
   98           | declarator '(' identifier_list ')'
   99           | declarator '(' ')'
  100           | declarator '(' error ')'

  101 parameter_list: parameter_declaration
  102               | parameter_list ',' parameter_declaration

  103 parameter_declaration: declaration_specifiers declarator
  104                      | declaration_specifiers abstract_declarator
  105                      | declaration_specifiers

  106 identifier_list: IDENTIFIER
  107                | identifier_list ',' IDENTIFIER

  108 type_name: specifier_qualifier_list
  109          | specifier_qualifier_list abstract_declarator

  110 specifier_qualifier_list: type_specifier specifier_qualifier_list
  111                         | type_specifier

  112 abstract_declarator: '(' abstract_declarator ')'
  113                    | '[' INTEGER_CONSTANT ']'
  114                    | abstract_declarator '[' INTEGER_CONSTANT ']'
  115                    | '(' ')'
  116                    | '(' parameter_list ')'
  117                    | abstract_declarator '(' ')'
  118                    | abstract_declarator '(' parameter_list ')'

  119 initializer: assignment_expression
  120            | '{' initializer_list '}'
  121            | '{' initializer_list ',' '}'

  122 initializer_list: initializer
  123                 | initializer_list ',' initializer

  124 statement: labeled_statement
  125          | compound_statement
  126          | expression_statement
  127          | selection_statement
  128          | iteration_statement
  129          | jump_statement

  130 labeled_statement: CASE constant_expression ':' statement
  131                  | DEFAULT ':' statement

  132 $@4: /* empty */

  133 compound_statement: '{' $@4 '}'

  134 $@5: /* empty */

  135 compound_statement: '{' declaration_list $@5 '}'
  136                   | '{' statement_list '}'

  137 $@6: /* empty */

  138 compound_statement: '{' declaration_list statement_list $@6 '}'

  139 statement_list: statement
  140               | statement_list m statement

  141 expression_statement: ';'
  142                     | expression ';'

  143 m: /* empty */

  144 n: /* empty */

  145 selection_statement: IF '(' expression ')' m statement
  146                    | IF '(' expression ')' m statement ELSE n m statement
  147                    | SWITCH '(' expression ')' statement

  148 q: '(' expression ';'

  149 p: q expression ';'

  150 s: p expression ')' statement

  151 iteration_statement: WHILE '(' m expression ')' m statement
  152                    | DO statement WHILE '(' expression ')' ';'
  153                    | FOR s
  154                    | FOR '(' ';' expression ';' expression ')' statement
  155                    | FOR '(' ';' ';' expression ')' statement
  156                    | FOR '(' ';' ';' ')' statement
  157                    | FOR '(' expression ';' ';' expression ')' statement
  158                    | FOR '(' expression ';' ';' ')' statement
  159                    | FOR '(' ';' expression ';' ')' statement

  160 jump_statement: CONTINUE ';'
  161               | BREAK ';'
  162               | RETURN ';'
  163               | RETURN expression ';'

  164 translation_unit: external_declaration
  165                 | translation_unit external_declaration
  166                 | translation_unit error ')'

  167 external_declaration: function_definition
  168                     | declaration

  169 $@7: /* empty */

  170 function_definition: declarator $@7 compound_statement
  171                    | declaration_specifiers declarator declaration_list compound_statement

  172 $@8: /* empty */

  173 function_definition: declaration_specifiers declarator $@8 compound_statement
  174                    | declarator declaration_list compound_statement
  175                    | declaration_specifiers error compound_statement
  176                    | error compound_statement

  177 declaration_list: declaration
  178                 | declaration_list declaration


Terminals, with rules where they appear

$end (0) 0
'!' (33) 27
'%' (37) 33
'(' (40) 4 11 13 24 29 94 97 98 99 100 112 115 116 117 118 145 146
    147 148 151 152 154 155 156 157 158 159
')' (41) 4 11 13 24 29 94 97 98 99 100 112 115 116 117 118 145 146
    147 150 151 152 154 155 156 157 158 159 166
'*' (42) 31
'+' (43) 25 35
',' (44) 18 61 70 91 102 107 121 123
'-' (45) 26 36
'.' (46) 14
'/' (47) 32
':' (58) 50 130 131
';' (59) 62 63 64 65 66 67 89 141 142 148 149 152 154 155 156 157 158
    159 160 161 162 163
'<' (60) 38
'=' (61) 54 72
'>' (62) 39
'?' (63) 50
'[' (91) 9 95 113 114
']' (93) 9 95 113 114
'{' (123) 83 84 120 121 133 135 136 138
'}' (125) 83 84 120 121 133 135 136 138
error (256) 65 66 67 100 166 175 176
BREAK (258) 161
CASE (259) 130
CHAR (260) 74
CONTINUE (261) 160
DEFAULT (262) 131
DO (263) 152
DOUBLE (264) 79
ELSE (265) 146
FLOAT (266) 78
FOR (267) 153 154 155 156 157 158 159
IF (268) 145 146
INT (269) 76
LONG (270) 77
RETURN (271) 162 163
SHORT (272) 75
SIZEOF (273) 23 24
STRUCT (274) 85
SWITCH (275) 147
TYPEDEF (276) 64 65 66
UNION (277) 86
VOID (278) 73
WHILE (279) 151 152
IDENTIFIER (280) 1 14 83 93 106 107
CHARACTER_CONSTANT (281) 6
INTEGER_CONSTANT (282) 5 95 113 114
FLOATING_CONSTANT (283) 7
STRING (284) 3
INC_OP (285) 15 20
DEC_OP (286) 16 21
LE_OP (287) 40
GE_OP (288) 41
EQ_OP (289) 43
NE_OP (290) 44
AND_OP (291) 46
OR_OP (292) 48
MUL_ASSIG (293) 55
DIV_ASSIG (294) 56
MOD_ASSIG (295) 57
ADD_ASSIG (296) 58
SUB_ASSIG (297) 59
TYPEDEF_IDENTIFIER (298) 82
IF_PREC (299)


Nonterminals, with rules where they appear

$accept (65)
    on left: 0
primary_expression (66)
    on left: 1 2 3 4, on right: 8
constant (67)
    on left: 5 6 7, on right: 2
postfix_expression (68)
    on left: 8 9 11 13 14 15 16, on right: 9 11 13 14 15 16 19
$@1 (69)
    on left: 10, on right: 11
$@2 (70)
    on left: 12, on right: 13
argument_expression_list (71)
    on left: 17 18, on right: 13 18
unary_expression (72)
    on left: 19 20 21 22 23 24, on right: 20 21 23 28 53
unary_operator (73)
    on left: 25 26 27, on right: 22
cast_expression (74)
    on left: 28 29, on right: 22 29 30 31 32 33
multiplicative_expression (75)
    on left: 30 31 32 33, on right: 31 32 33 34 35 36
additive_expression (76)
    on left: 34 35 36, on right: 35 36 37 38 39 40 41
relational_expression (77)
    on left: 37 38 39 40 41, on right: 38 39 40 41 42 43 44
equality_expression (78)
    on left: 42 43 44, on right: 43 44 45 46
logical_AND_expression (79)
    on left: 45 46, on right: 46 47 48
logical_OR_expression (80)
    on left: 47 48, on right: 48 49 50
conditional_expression (81)
    on left: 49 50, on right: 50 51 52
constant_expression (82)
    on left: 51, on right: 130
assignment_expression (83)
    on left: 52 53, on right: 17 18 53 60 61 119
assignment_operator (84)
    on left: 54 55 56 57 58 59, on right: 53
expression (85)
    on left: 60 61, on right: 4 9 50 61 142 145 146 147 148 149 150
    151 152 154 155 157 158 159 163
declaration (86)
    on left: 62 63 64 65 66 67, on right: 168 177 178
declaration_specifiers (87)
    on left: 68, on right: 62 63 64 66 103 104 105 171 173 175
init_declarator_list (88)
    on left: 69 70, on right: 63 70
init_declarator (89)
    on left: 71 72, on right: 69 70
type_specifier (90)
    on left: 73 74 75 76 77 78 79 80 81, on right: 68 110 111
typedef_name (91)
    on left: 82, on right: 81
struct_or_union_specifier (92)
    on left: 83 84, on right: 80
struct_or_union (93)
    on left: 85 86, on right: 83 84
struct_declaration_list (94)
    on left: 87 88, on right: 83 84 88
struct_declaration (95)
    on left: 89, on right: 87 88
struct_declarator_list (96)
    on left: 90 91, on right: 89 91
struct_declarator (97)
    on left: 92, on right: 90 91
declarator (98)
    on left: 93 94 95 97 98 99 100, on right: 64 65 71 72 92 94 95
    97 98 99 100 103 170 171 173 174
$@3 (99)
    on left: 96, on right: 97
parameter_list (100)
    on left: 101 102, on right: 97 102 116 118
parameter_declaration (101)
    on left: 103 104 105, on right: 101 102
identifier_list (102)
    on left: 106 107, on right: 98 107
type_name (103)
    on left: 108 109, on right: 24 29
specifier_qualifier_list (104)
    on left: 110 111, on right: 89 108 109 110
abstract_declarator (105)
    on left: 112 113 114 115 116 117 118, on right: 104 109 112 114
    117 118
initializer (106)
    on left: 119 120 121, on right: 72 122 123
initializer_list (107)
    on left: 122 123, on right: 120 121 123
statement (108)
    on left: 124 125 126 127 128 129, on right: 130 131 139 140 145
    146 147 150 151 152 154 155 156 157 158 159
labeled_statement (109)
    on left: 130 131, on right: 124
compound_statement (110)
    on left: 133 135 136 138, on right: 125 170 171 173 174 175 176
$@4 (111)
    on left: 132, on right: 133
$@5 (112)
    on left: 134, on right: 135
$@6 (113)
    on left: 137, on right: 138
statement_list (114)
    on left: 139 140, on right: 136 138 140
expression_statement (115)
    on left: 141 142, on right: 126
m (116)
    on left: 143, on right: 46 48 140 145 146 151
n (117)
    on left: 144, on right: 146
selection_statement (118)
    on left: 145 146 147, on right: 127
q (119)
    on left: 148, on right: 149
p (120)
    on left: 149, on right: 150
s (121)
    on left: 150, on right: 153
iteration_statement (122)
    on left: 151 152 153 154 155 156 157 158 159, on right: 128
jump_statement (123)
    on left: 160 161 162 163, on right: 129
translation_unit (124)
    on left: 164 165 166, on right: 0 165 166
external_declaration (125)
    on left: 167 168, on right: 164 165
function_definition (126)
    on left: 170 171 173 174 175 176, on right: 167
$@7 (127)
    on left: 169, on right: 170
$@8 (128)
    on left: 172, on right: 173
declaration_list (129)
    on left: 177 178, on right: 135 138 171 174 178


state 0

    0 $accept: . translation_unit $end

    error               shift, and go to state 1
    CHAR                shift, and go to state 2
    DOUBLE              shift, and go to state 3
    FLOAT               shift, and go to state 4
    INT                 shift, and go to state 5
    LONG                shift, and go to state 6
    SHORT               shift, and go to state 7
    STRUCT              shift, and go to state 8
    TYPEDEF             shift, and go to state 9
    UNION               shift, and go to state 10
    VOID                shift, and go to state 11
    IDENTIFIER          shift, and go to state 12
    TYPEDEF_IDENTIFIER  shift, and go to state 13
    '('                 shift, and go to state 14

    declaration                go to state 15
    declaration_specifiers     go to state 16
    type_specifier             go to state 17
    typedef_name               go to state 18
    struct_or_union_specifier  go to state 19
    struct_or_union            go to state 20
    declarator                 go to state 21
    translation_unit           go to state 22
    external_declaration       go to state 23
    function_definition        go to state 24


state 1

   67 declaration: error . ';'
  176 function_definition: error . compound_statement

    '{'  shift, and go to state 25
    ';'  shift, and go to state 26

    compound_statement  go to state 27


state 2

   74 type_specifier: CHAR .

    $default  reduce using rule 74 (type_specifier)


state 3

   79 type_specifier: DOUBLE .

    $default  reduce using rule 79 (type_specifier)


state 4

   78 type_specifier: FLOAT .

    $default  reduce using rule 78 (type_specifier)


state 5

   76 type_specifier: INT .

    $default  reduce using rule 76 (type_specifier)


state 6

   77 type_specifier: LONG .

    $default  reduce using rule 77 (type_specifier)


state 7

   75 type_specifier: SHORT .

    $default  reduce using rule 75 (type_specifier)


state 8

   85 struct_or_union: STRUCT .

    $default  reduce using rule 85 (struct_or_union)


state 9

   64 declaration: TYPEDEF . declaration_specifiers declarator ';'
   65            | TYPEDEF . error declarator ';'
   66            | TYPEDEF . declaration_specifiers error ';'

    error               shift, and go to state 28
    CHAR                shift, and go to state 2
    DOUBLE              shift, and go to state 3
    FLOAT               shift, and go to state 4
    INT                 shift, and go to state 5
    LONG                shift, and go to state 6
    SHORT               shift, and go to state 7
    STRUCT              shift, and go to state 8
    UNION               shift, and go to state 10
    VOID                shift, and go to state 11
    TYPEDEF_IDENTIFIER  shift, and go to state 13

    declaration_specifiers     go to state 29
    type_specifier             go to state 17
    typedef_name               go to state 18
    struct_or_union_specifier  go to state 19
    struct_or_union            go to state 20


state 10

   86 struct_or_union: UNION .

    $default  reduce using rule 86 (struct_or_union)


state 11

   73 type_specifier: VOID .

    $default  reduce using rule 73 (type_specifier)


state 12

   93 declarator: IDENTIFIER .

    $default  reduce using rule 93 (declarator)


state 13

   82 typedef_name: TYPEDEF_IDENTIFIER .

    $default  reduce using rule 82 (typedef_name)


state 14

   94 declarator: '(' . declarator ')'

    IDENTIFIER  shift, and go to state 12
    '('         shift, and go to state 14

    declarator  go to state 30


state 15

  168 external_declaration: declaration .

    $default  reduce using rule 168 (external_declaration)


state 16

   62 declaration: declaration_specifiers . ';'
   63            | declaration_specifiers . init_declarator_list ';'
  171 function_definition: declaration_specifiers . declarator declaration_list compound_statement
  173                    | declaration_specifiers . declarator $@8 compound_statement
  175                    | declaration_specifiers . error compound_statement

    error       shift, and go to state 31
    IDENTIFIER  shift, and go to state 12
    '('         shift, and go to state 14
    ';'         shift, and go to state 32

    init_declarator_list  go to state 33
    init_declarator       go to state 34
    declarator            go to state 35


state 17

   68 declaration_specifiers: type_specifier .

    $default  reduce using rule 68 (declaration_specifiers)


state 18

   81 type_specifier: typedef_name .

    $default  reduce using rule 81 (type_specifier)


state 19

   80 type_specifier: struct_or_union_specifier .

    $default  reduce using rule 80 (type_specifier)


state 20

   83 struct_or_union_specifier: struct_or_union . IDENTIFIER '{' struct_declaration_list '}'
   84                          | struct_or_union . '{' struct_declaration_list '}'

    IDENTIFIER  shift, and go to state 36
    '{'         shift, and go to state 37


state 21

   95 declarator: declarator . '[' INTEGER_CONSTANT ']'
   97           | declarator . '(' $@3 parameter_list ')'
   98           | declarator . '(' identifier_list ')'
   99           | declarator . '(' ')'
  100           | declarator . '(' error ')'
  170 function_definition: declarator . $@7 compound_statement
  174                    | declarator . declaration_list compound_statement

    error               shift, and go to state 38
    CHAR                shift, and go to state 2
    DOUBLE              shift, and go to state 3
    FLOAT               shift, and go to state 4
    INT                 shift, and go to state 5
    LONG                shift, and go to state 6
    SHORT               shift, and go to state 7
    STRUCT              shift, and go to state 8
    TYPEDEF             shift, and go to state 9
    UNION               shift, and go to state 10
    VOID                shift, and go to state 11
    TYPEDEF_IDENTIFIER  shift, and go to state 13
    '('                 shift, and go to state 39
    '['                 shift, and go to state 40

    '{'  reduce using rule 169 ($@7)

    declaration                go to state 41
    declaration_specifiers     go to state 42
    type_specifier             go to state 17
    typedef_name               go to state 18
    struct_or_union_specifier  go to state 19
    struct_or_union            go to state 20
    $@7                        go to state 43
    declaration_list           go to state 44


state 22

    0 $accept: translation_unit . $end
  165 translation_unit: translation_unit . external_declaration
  166                 | translation_unit . error ')'

    $end                shift, and go to state 45
    error               shift, and go to state 46
    CHAR                shift, and go to state 2
    DOUBLE              shift, and go to state 3
    FLOAT               shift, and go to state 4
    INT                 shift, and go to state 5
    LONG                shift, and go to state 6
    SHORT               shift, and go to state 7
    STRUCT              shift, and go to state 8
    TYPEDEF             shift, and go to state 9
    UNION               shift, and go to state 10
    VOID                shift, and go to state 11
    IDENTIFIER          shift, and go to state 12
    TYPEDEF_IDENTIFIER  shift, and go to state 13
    '('                 shift, and go to state 14

    declaration                go to state 15
    declaration_specifiers     go to state 16
    type_specifier             go to state 17
    typedef_name               go to state 18
    struct_or_union_specifier  go to state 19
    struct_or_union            go to state 20
    declarator                 go to state 21
    external_declaration       go to state 47
    function_definition        go to state 24


state 23

  164 translation_unit: external_declaration .

    $default  reduce using rule 164 (translation_unit)


state 24

  167 external_declaration: function_definition .

    $default  reduce using rule 167 (external_declaration)


state 25

  133 compound_statement: '{' . $@4 '}'
  135                   | '{' . declaration_list $@5 '}'
  136                   | '{' . statement_list '}'
  138                   | '{' . declaration_list statement_list $@6 '}'

    error               shift, and go to state 38
    BREAK               shift, and go to state 48
    CASE                shift, and go to state 49
    CHAR                shift, and go to state 2
    CONTINUE            shift, and go to state 50
    DEFAULT             shift, and go to state 51
    DO                  shift, and go to state 52
    DOUBLE              shift, and go to state 3
    FLOAT               shift, and go to state 4
    FOR                 shift, and go to state 53
    IF                  shift, and go to state 54
    INT                 shift, and go to state 5
    LONG                shift, and go to state 6
    RETURN              shift, and go to state 55
    SHORT               shift, and go to state 7
    SIZEOF              shift, and go to state 56
    STRUCT              shift, and go to state 8
    SWITCH              shift, and go to state 57
    TYPEDEF             shift, and go to state 9
    UNION               shift, and go to state 10
    VOID                shift, and go to state 11
    WHILE               shift, and go to state 58
    IDENTIFIER          shift, and go to state 59
    CHARACTER_CONSTANT  shift, and go to state 60
    INTEGER_CONSTANT    shift, and go to state 61
    FLOATING_CONSTANT   shift, and go to state 62
    STRING              shift, and go to state 63
    INC_OP              shift, and go to state 64
    DEC_OP              shift, and go to state 65
    TYPEDEF_IDENTIFIER  shift, and go to state 13
    '{'                 shift, and go to state 25
    '('                 shift, and go to state 66
    '+'                 shift, and go to state 67
    '-'                 shift, and go to state 68
    '!'                 shift, and go to state 69
    ';'                 shift, and go to state 70

    '}'  reduce using rule 132 ($@4)

    primary_expression         go to state 71
    constant                   go to state 72
    postfix_expression         go to state 73
    unary_expression           go to state 74
    unary_operator             go to state 75
    cast_expression            go to state 76
    multiplicative_expression  go to state 77
    additive_expression        go to state 78
    relational_expression      go to state 79
    equality_expression        go to state 80
    logical_AND_expression     go to state 81
    logical_OR_expression      go to state 82
    conditional_expression     go to state 83
    assignment_expression      go to state 84
    expression                 go to state 85
    declaration                go to state 41
    declaration_specifiers     go to state 42
    type_specifier             go to state 17
    typedef_name               go to state 18
    struct_or_union_specifier  go to state 19
    struct_or_union            go to state 20
    statement                  go to state 86
    labeled_statement          go to state 87
    compound_statement         go to state 88
    $@4                        go to state 89
    statement_list             go to state 90
    expression_statement       go to state 91
    selection_statement        go to state 92
    iteration_statement        go to state 93
    jump_statement             go to state 94
    declaration_list           go to state 95


state 26

   67 declaration: error ';' .

    $default  reduce using rule 67 (declaration)


state 27

  176 function_definition: error compound_statement .

    $default  reduce using rule 176 (function_definition)


state 28

   65 declaration: TYPEDEF error . declarator ';'

    IDENTIFIER  shift, and go to state 12
    '('         shift, and go to state 14

    declarator  go to state 96


state 29

   64 declaration: TYPEDEF declaration_specifiers . declarator ';'
   66            | TYPEDEF declaration_specifiers . error ';'

    error       shift, and go to state 97
    IDENTIFIER  shift, and go to state 12
    '('         shift, and go to state 14

    declarator  go to state 98


state 30

   94 declarator: '(' declarator . ')'
   95           | declarator . '[' INTEGER_CONSTANT ']'
   97           | declarator . '(' $@3 parameter_list ')'
   98           | declarator . '(' identifier_list ')'
   99           | declarator . '(' ')'
  100           | declarator . '(' error ')'

    '('  shift, and go to state 39
    ')'  shift, and go to state 99
    '['  shift, and go to state 40


state 31

  175 function_definition: declaration_specifiers error . compound_statement

    '{'  shift, and go to state 25

    compound_statement  go to state 100


state 32

   62 declaration: declaration_specifiers ';' .

    $default  reduce using rule 62 (declaration)


state 33

   63 declaration: declaration_specifiers init_declarator_list . ';'
   70 init_declarator_list: init_declarator_list . ',' init_declarator

    ','  shift, and go to state 101
    ';'  shift, and go to state 102


state 34

   69 init_declarator_list: init_declarator .

    $default  reduce using rule 69 (init_declarator_list)


state 35

   71 init_declarator: declarator .
   72                | declarator . '=' initializer
   95 declarator: declarator . '[' INTEGER_CONSTANT ']'
   97           | declarator . '(' $@3 parameter_list ')'
   98           | declarator . '(' identifier_list ')'
   99           | declarator . '(' ')'
  100           | declarator . '(' error ')'
  171 function_definition: declaration_specifiers declarator . declaration_list compound_statement
  173                    | declaration_specifiers declarator . $@8 compound_statement

    error               shift, and go to state 38
    CHAR                shift, and go to state 2
    DOUBLE              shift, and go to state 3
    FLOAT               shift, and go to state 4
    INT                 shift, and go to state 5
    LONG                shift, and go to state 6
    SHORT               shift, and go to state 7
    STRUCT              shift, and go to state 8
    TYPEDEF             shift, and go to state 9
    UNION               shift, and go to state 10
    VOID                shift, and go to state 11
    TYPEDEF_IDENTIFIER  shift, and go to state 13
    '('                 shift, and go to state 39
    '='                 shift, and go to state 103
    '['                 shift, and go to state 40

    '{'  reduce using rule 172 ($@8)
    ','  reduce using rule 71 (init_declarator)
    ';'  reduce using rule 71 (init_declarator)

    declaration                go to state 41
    declaration_specifiers     go to state 42
    type_specifier             go to state 17
    typedef_name               go to state 18
    struct_or_union_specifier  go to state 19
    struct_or_union            go to state 20
    $@8                        go to state 104
    declaration_list           go to state 105


state 36

   83 struct_or_union_specifier: struct_or_union IDENTIFIER . '{' struct_declaration_list '}'

    '{'  shift, and go to state 106


state 37

   84 struct_or_union_specifier: struct_or_union '{' . struct_declaration_list '}'

    CHAR                shift, and go to state 2
    DOUBLE              shift, and go to state 3
    FLOAT               shift, and go to state 4
    INT                 shift, and go to state 5
    LONG                shift, and go to state 6
    SHORT               shift, and go to state 7
    STRUCT              shift, and go to state 8
    UNION               shift, and go to state 10
    VOID                shift, and go to state 11
    TYPEDEF_IDENTIFIER  shift, and go to state 13

    type_specifier             go to state 107
    typedef_name               go to state 18
    struct_or_union_specifier  go to state 19
    struct_or_union            go to state 20
    struct_declaration_list    go to state 108
    struct_declaration         go to state 109
    specifier_qualifier_list   go to state 110


state 38

   67 declaration: error . ';'

    ';'  shift, and go to state 26


state 39

   97 declarator: declarator '(' . $@3 parameter_list ')'
   98           | declarator '(' . identifier_list ')'
   99           | declarator '(' . ')'
  100           | declarator '(' . error ')'

    error       shift, and go to state 111
    IDENTIFIER  shift, and go to state 112
    ')'         shift, and go to state 113

    CHAR                reduce using rule 96 ($@3)
    DOUBLE              reduce using rule 96 ($@3)
    FLOAT               reduce using rule 96 ($@3)
    INT                 reduce using rule 96 ($@3)
    LONG                reduce using rule 96 ($@3)
    SHORT               reduce using rule 96 ($@3)
    STRUCT              reduce using rule 96 ($@3)
    UNION               reduce using rule 96 ($@3)
    VOID                reduce using rule 96 ($@3)
    TYPEDEF_IDENTIFIER  reduce using rule 96 ($@3)

    $@3              go to state 114
    identifier_list  go to state 115


state 40

   95 declarator: declarator '[' . INTEGER_CONSTANT ']'

    INTEGER_CONSTANT  shift, and go to state 116


state 41

  177 declaration_list: declaration .

    $default  reduce using rule 177 (declaration_list)


state 42

   62 declaration: declaration_specifiers . ';'
   63            | declaration_specifiers . init_declarator_list ';'

    IDENTIFIER  shift, and go to state 12
    '('         shift, and go to state 14
    ';'         shift, and go to state 32

    init_declarator_list  go to state 33
    init_declarator       go to state 34
    declarator            go to state 117


state 43

  170 function_definition: declarator $@7 . compound_statement

    '{'  shift, and go to state 25

    compound_statement  go to state 118


state 44

  174 function_definition: declarator declaration_list . compound_statement
  178 declaration_list: declaration_list . declaration

    error               shift, and go to state 38
    CHAR                shift, and go to state 2
    DOUBLE              shift, and go to state 3
    FLOAT               shift, and go to state 4
    INT                 shift, and go to state 5
    LONG                shift, and go to state 6
    SHORT               shift, and go to state 7
    STRUCT              shift, and go to state 8
    TYPEDEF             shift, and go to state 9
    UNION               shift, and go to state 10
    VOID                shift, and go to state 11
    TYPEDEF_IDENTIFIER  shift, and go to state 13
    '{'                 shift, and go to state 25

    declaration                go to state 119
    declaration_specifiers     go to state 42
    type_specifier             go to state 17
    typedef_name               go to state 18
    struct_or_union_specifier  go to state 19
    struct_or_union            go to state 20
    compound_statement         go to state 120


state 45

    0 $accept: translation_unit $end .

    $default  accept


state 46

   67 declaration: error . ';'
  166 translation_unit: translation_unit error . ')'
  176 function_definition: error . compound_statement

    '{'  shift, and go to state 25
    ')'  shift, and go to state 121
    ';'  shift, and go to state 26

    compound_statement  go to state 27


state 47

  165 translation_unit: translation_unit external_declaration .

    $default  reduce using rule 165 (translation_unit)


state 48

  161 jump_statement: BREAK . ';'

    ';'  shift, and go to state 122


state 49

  130 labeled_statement: CASE . constant_expression ':' statement

    SIZEOF              shift, and go to state 56
    IDENTIFIER          shift, and go to state 59
    CHARACTER_CONSTANT  shift, and go to state 60
    INTEGER_CONSTANT    shift, and go to state 61
    FLOATING_CONSTANT   shift, and go to state 62
    STRING              shift, and go to state 63
    INC_OP              shift, and go to state 64
    DEC_OP              shift, and go to state 65
    '('                 shift, and go to state 66
    '+'                 shift, and go to state 67
    '-'                 shift, and go to state 68
    '!'                 shift, and go to state 69

    primary_expression         go to state 71
    constant                   go to state 72
    postfix_expression         go to state 73
    unary_expression           go to state 123
    unary_operator             go to state 75
    cast_expression            go to state 76
    multiplicative_expression  go to state 77
    additive_expression        go to state 78
    relational_expression      go to state 79
    equality_expression        go to state 80
    logical_AND_expression     go to state 81
    logical_OR_expression      go to state 82
    conditional_expression     go to state 124
    constant_expression        go to state 125


state 50

  160 jump_statement: CONTINUE . ';'

    ';'  shift, and go to state 126


state 51

  131 labeled_statement: DEFAULT . ':' statement

    ':'  shift, and go to state 127


state 52

  152 iteration_statement: DO . statement WHILE '(' expression ')' ';'

    BREAK               shift, and go to state 48
    CASE                shift, and go to state 49
    CONTINUE            shift, and go to state 50
    DEFAULT             shift, and go to state 51
    DO                  shift, and go to state 52
    FOR                 shift, and go to state 53
    IF                  shift, and go to state 54
    RETURN              shift, and go to state 55
    SIZEOF              shift, and go to state 56
    SWITCH              shift, and go to state 57
    WHILE               shift, and go to state 58
    IDENTIFIER          shift, and go to state 59
    CHARACTER_CONSTANT  shift, and go to state 60
    INTEGER_CONSTANT    shift, and go to state 61
    FLOATING_CONSTANT   shift, and go to state 62
    STRING              shift, and go to state 63
    INC_OP              shift, and go to state 64
    DEC_OP              shift, and go to state 65
    '{'                 shift, and go to state 25
    '('                 shift, and go to state 66
    '+'                 shift, and go to state 67
    '-'                 shift, and go to state 68
    '!'                 shift, and go to state 69
    ';'                 shift, and go to state 70

    primary_expression         go to state 71
    constant                   go to state 72
    postfix_expression         go to state 73
    unary_expression           go to state 74
    unary_operator             go to state 75
    cast_expression            go to state 76
    multiplicative_expression  go to state 77
    additive_expression        go to state 78
    relational_expression      go to state 79
    equality_expression        go to state 80
    logical_AND_expression     go to state 81
    logical_OR_expression      go to state 82
    conditional_expression     go to state 83
    assignment_expression      go to state 84
    expression                 go to state 85
    statement                  go to state 128
    labeled_statement          go to state 87
    compound_statement         go to state 88
    expression_statement       go to state 91
    selection_statement        go to state 92
    iteration_statement        go to state 93
    jump_statement             go to state 94


state 53

  153 iteration_statement: FOR . s
  154                    | FOR . '(' ';' expression ';' expression ')' statement
  155                    | FOR . '(' ';' ';' expression ')' statement
  156                    | FOR . '(' ';' ';' ')' statement
  157                    | FOR . '(' expression ';' ';' expression ')' statement
  158                    | FOR . '(' expression ';' ';' ')' statement
  159                    | FOR . '(' ';' expression ';' ')' statement

    '('  shift, and go to state 129

    q  go to state 130
    p  go to state 131
    s  go to state 132


state 54

  145 selection_statement: IF . '(' expression ')' m statement
  146                    | IF . '(' expression ')' m statement ELSE n m statement

    '('  shift, and go to state 133


state 55

  162 jump_statement: RETURN . ';'
  163               | RETURN . expression ';'
